2012-04-13 belangeo <belangeo@gmail.com>

    * Added PyoObject.range(min, max) method. Adjust mul and add attributes.
    - rev 923

2012-04-13 belangeo <belangeo@gmail.com>

    * Added new object : Urn. Periodic pseudo-random integer generator without duplicates.
    - rev 922

2012-04-09 belangeo <belangeo@gmail.com>

    * Added new object : Count. Counts integers at audio rate.
    - rev 919

2012-04-06 belangeo <belangeo@gmail.com>

    * Added new object : OscListReceive. Handles list of floats from OSC as audio streams.
    - rev 914

2012-04-03 belangeo <belangeo@gmail.com>

    * Added functionalities to OSC objects (add, remove, setInterpolation, etc.).
    - rev 913

-------------------------------------------------------------------------------------

2012-01-03 belangeo <belangeo@gmail.com>

    * rev 807 - Updated version number, release tag: 0.6.0.

2011-12-22 belangeo <belangeo@gmail.com>

    * Added new object: MToT. Midi to transposition factor conversion.
    - rev 805

2011-12-20 belangeo <belangeo@gmail.com>

    * Added new objects: XnoiseDur,  Recursive time varying X-class pseudo-random generator. SincTable, sinc window function.
    - rev 803

2011-12-19 belangeo <belangeo@gmail.com>

    * Added new object: VoiceManager. Polyphony voice manager.
    - rev 802

2011-12-14 belangeo <belangeo@gmail.com>

    * Added downsamp() function. Sampling rate conversion of a soundfile.
    - rev 798

2011-12-13 belangeo <belangeo@gmail.com>

    * Added upsamp() function. Sampling rate conversion of a soundfile.
    - rev 797

2011-12-13 belangeo <belangeo@gmail.com>

    * Added copy() method to the PyoTableObject.
    - rev 796

2011-12-12 belangeo <belangeo@gmail.com>

    * Added reverse() method to the PyoTableObject.
    - rev 795

2011-12-11 belangeo <belangeo@gmail.com>

    * Added removeDC() method to the PyoTableObject.
    - rev 794

2011-12-07 belangeo <belangeo@gmail.com>
